# ChangeLog for app-admin/graylog2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*graylog2-0.9.2 (15 Oct 2010)

  15 Oct 2010; Dean Matzkov (bapa) <bapabooiee@gmail.com>
  +graylog2-0.9.2.ebuild:
  Version bump
